<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/guide_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:background="@color/primaryColor">

        <ImageView
            android:id="@+id/buttonBack"
            android:layout_width="60dp"
            android:layout_height="83dp"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/arrow_white" />


        <TextView
            android:id="@+id/title_template"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="top|center"
            android:layout_marginLeft="30dp"
            android:fontFamily="@font/libre_baskerville"
            android:gravity="center"
            android:text="@string/name_of_the_guide"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </FrameLayout>

    <org.osmdroid.views.MapView
        android:id="@+id/mapView"
        android:layout_height="270dp"
        android:layout_width="355dp"
        android:layout_marginTop="90dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/frame">
    </org.osmdroid.views.MapView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/guide_linear_layout"
            android:layout_width="355dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:layout_marginTop="180dp"
            android:background="@drawable/frame"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="ExtraText">

            <TextView
                android:id="@+id/titleOfGuide"
                android:layout_width="330dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/libre_baskerville"
                android:gravity="start"
                android:text="@string/SSing_name"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/distance"
                android:layout_width="330dp"
                android:layout_height="26dp"
                android:layout_gravity="top|center"
                android:fontFamily="@font/libre_baskerville"
                android:gravity="start"
                android:text="@string/distance"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/startPunkt"
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_gravity="top|center"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/libre_baskerville"
                android:gravity="start"
                android:text="@string/startPunkt"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/endPunkt"
                android:layout_width="330dp"
                android:layout_height="40dp"
                android:layout_gravity="top|center"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/libre_baskerville"
                android:gravity="start"
                android:text="@string/endPunkt"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/list_title"
                android:layout_width="330dp"
                android:layout_height="20dp"
                android:layout_gravity="top|center"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/libre_baskerville"
                android:gravity="start"
                android:text="@string/listTitle"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <ListView
                android:id="@+id/listOfSSeings"
                android:layout_width="330dp"
                android:layout_height="153dp"
                android:layout_gravity="left"
                android:clipToPadding="false"
                android:dividerHeight="1dp"
                android:padding="16dp"
                android:paddingBottom="16dp"
                android:scrollbars="vertical" />

        </LinearLayout>
    </FrameLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton

        android:id="@+id/addComRatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/chat"
        app:tint="@null"
        app:fabSize="normal"
        app:maxImageSize="26dp"
        app:backgroundTint="@color/primaryColor"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

