...
    <string name="listTitle">List of Sightseeings: </string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="Wanderwege">toolbar</string>
    <string name="choose_from_list">Choose from list</string>
    <string name="wanderwege">Wanderwege</string>
    <string name="choose_from_map">Choose from Map</string>
    <string name="name_of_the_guide">Name of the Guide</string>
    <string name="SSing_name">SSing_name</string>
    <string name="rating">Rating</string>
    <string name="_1_5">1/5</string>
...
